# MyosotisFramework

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THANKS.md  appveyor.yml  build.bat  buildAllShaders.bat  buildAllShaders.sh  buildMingwGCCProject.bat  buildNinjaClangProject.bat  buildNinjaProject.bat  buildVS22Project.bat  buildVS26Project.bat  cmakeBuild.bat  envSetup.bat  generateNinjaClangProject.bat  generateVS22Project.bat  setupQT.bat  setupQT_MSVC.bat  setupQT_clang.bat  setupQT_clang.sh  setupQT_msvc.bat  setupQT_msys2.bat  todo.txt  welcome.bat  welcome_MSVC.bat  welcome_NJ_clang.sh  welcome_vs22.bat  welcome_vs26.bat  windowsBuild.bat
core/: CMakeLists.txt  CMakePresets.json  imgui.ini
core/core/test/glm-subbuild/: CMakeCache.txt  CMakeLists.txt
core/editor/: CMakeLists.txt
core/editor/include/: Editor.h  EditorManager.h  MainWindow.h  VulkanWindow.h
core/editor/include/ContentBrowser/: ContentBrowserDockWidget.h  ContentBrowserFileSystemModel.h  ContentBrowserSortFilterProxyModel.h
core/editor/include/EditorWidget/: DirectoryPathEditor.h  FilePathEditor.h
core/editor/include/Libs/: KeyConverter.h  iqt.h
core/editor/include/LogViewer/: LoggerDockWidget.h  LoggerPreviewFilterProxyModel.h  LoggerPreviewItemDelegate.h  LoggerPreviewModel.h  LoggerPreviewView.h
core/editor/include/Overview/: OverviewDockWidget.h  OverviewMObjectModel.h  OverviewTreeView.h
core/editor/include/PropertyViewer/: PropertyViewerComponentWidget.h  PropertyViewerDockWidget.h
core/editor/include/Structs/: AxisConfig.h  AxisDrawCommand.h  MemoryUsage.h
core/editor/include/Subsystem/: EditorGameDirector.h  EditorRenderSubsystem.h
core/editor/include/WorldSetting/: WorldSettingDockWidget.h
core/editor/src/: Editor.cpp  EditorManager.cpp  Main.cpp  MainWindow.cpp  VulkanWindow.cpp
core/editor/src/ContentBrowser/: ContentBrowserDockWidget.cpp
core/editor/src/LogViewer/: LoggerDockWidget.cpp
core/editor/src/Overview/: OverviewDockWidget.cpp  OverviewTreeView.cpp
core/editor/src/PropertyViewer/: PropertyViewerDockWidget.cpp
core/editor/src/Subsystem/: EditorGameDirector.cpp  EditorRenderSubsystem.cpp
core/editor/src/WorldSetting/: WorldSettingDockWidget.cpp
core/framework/include/: AppInfo.h  Application.h  ApplicationInterface.h  ClassPointer.h  Logger.h  Structs.h  SystemManager.h  ThreadPool.h  ThreadSaveValue.h  VK_CreateInfo.h  VK_Loader.h  VK_Validation.h
core/framework/include/Component/: ComponentBase.h  ComponentCast.h  ComponentFactory.h  ComponentProperty.h  ComponentType.h
core/framework/include/IO/: CubeImageIo.h  FBXIo.h  GLTFIo.h  GameStageIo.h  ImageIo.h  MFModelIo.h  MFWorldIo.h  ShaderIo.h  TerrainIo.h
core/framework/include/Libs/: iRapidJson.h  iglfw.h  iglm.h  iimgui.h  imeshoptimizer.h  iofbx.h  istb_image.h  istduuid.h  itiny_gltf.h  ivma.h  ixatlas.h
core/framework/include/MObject/: MObject.h  MObjectRegistry.h
core/framework/include/Object/: ObjectBase.h
core/framework/include/Property/: PropertyBase.h
core/framework/include/StageObject/: StageObject.h
core/framework/include/Structs/: AccelerationStructure.h  BLASInfo.h  BasicMaterial.h  BasicMaterialInfo.h  Buffer.h  CameraData.h  CameraInfo.h  Descriptor.h  FilePath.h  Image.h  Mesh.h  MeshInfo.h  Meshlet.h  MeshletInfo.h  ObjectInfo.h  RawMeshData.h  Ray.h  SceneInfo.h  ScreenInfo.h  ShaderBase.h  TLASInfo.h  TLASInstance.h  TLASInstanceInfo.h  TerrainChunk.h  Transform.h  UpdateData.h  VBDispatchInfo.h  VertexData.h
core/framework/include/Subsystem/: GameDirector.h  (+1 more)
core/framework/src/: Application.cpp  Main.cpp  SystemManager.cpp
core/frameworkDLL/: CMakeLists.txt
core/frameworkDLL/include/: Application.h
core/frameworkDLL/src/: Application.cpp  Main.cpp
core/include/: AppInfo.h  Application.h  Logger.h  Structs.h  SystemManager.h  VK_CreateInfo.h  VK_Loader.h  appInfo.h  application.h  applicationInterface.h  classPointer.h  logger.h  objectBase.h  objectType.h  systemManager.h  vkCreateInfo.h  vkLoader.h  vkStruct.h  vkValidation.h
core/include/Libs/: iRapidJson.h  iglm.h  istduuid.h  ivma.h
core/include/Object/: ObjectBase.h  ObjectFactory.h  ObjectType.h
core/include/Subsystem/: GameDirector.h  RenderSubsystem.h
core/include/libs/: glfw.h  iRapidJson.h  iglm.h  iofbx.h  istduuid.h  ivma.h  vma.h
core/include/object/: objectBase.h  objectCast.h  objectFactory.h  objectType.h
core/include/subsystem/: gameDirector.h  renderSubsystem.h
core/myosotis/: CMakeLists.txt
core/myosotis/include/: Application.h
core/myosotis/src/: Application.cpp  Main.cpp
core/resources/appInfo/: appInfo.rc  resource.h
core/resources/gamestage/: TEST.gs  TEST_backup.gs
core/resources/models/: test.fbx
core/resources/shaders/: BindlessResources.frag  CameraSSBO.glsl  DirectionalLightSSBO.glsl  EditorFinalComposition.frag  FinalComposition.frag  Fog.frag  Frustum_Culling.comp  Gizmo.frag  Gizmo.vert  Grid.frag  Grid.vert  InteriorMapping_Deferred.frag  InteriorMapping_Deferred.vert  Lighting.frag  Lighting.vert  Lightmap.vert  MeshShader.frag  MeshShader.mesh  MeshShader.task  RawDataLoader.glsl  ShadowMap.vert  Skybox.frag  Skybox.vert  StandardSSBO.glsl  StaticMesh.vert  StaticMesh_Composition.frag  StaticMesh_Composition.vert  StaticMesh_Deferred.frag  StaticMesh_Deferred.vert  StaticMesh_DepthFade.frag  StaticMesh_DepthFade.vert  TaskShader.task  Terrain.frag  Terrain.vert  TerrainVisibilityBuffer.frag  TerrainVisibilityBuffer.mesh  TerrainVisibilityBuffer.task  VisibilityBuffer.frag  VisibilityBuffer.mesh  VisibilityBuffer.task
core/resources/world/: test.mfworld
core/src/: Application.cpp  SystemManager.cpp  application.cpp  main.cpp  systemManager.cpp
core/src/Subsystem/: GameDirector.cpp  RenderSubsystem.cpp
core/src/subsystem/: gameDirector.cpp  renderSubsystem.cpp
core/tools/: CMakeLists.txt  dllBuilder.bat  ninjaBuildMyosotis.bat  ninjaBuildMyosotisEngine.bat  ninjaBuildMyosotis_release.bat  vs22BuildAll_release.bat  vs22BuildMyosotisDLL_debug.bat  vs22BuildMyosotis_release.bat
core/tools/MFModelConverter/: CMakeLists.txt
(+367 files in other folders)
